# talent-plan

courses/rust/exercises/: bb2_serialization.rs
courses/rust/exercises/mini-redis-client/: Cargo.toml
courses/rust/exercises/mini-redis-client/src/: main.rs
courses/rust/exercises/mini-redis-proto/: Cargo.toml
courses/rust/exercises/mini-redis-proto/src/: lib.rs
courses/rust/exercises/mini-redis-server/: Cargo.toml
courses/rust/exercises/mini-redis-server/src/: main.rs
courses/rust/my_projects/project1/: Cargo.toml
courses/rust/my_projects/project1/src/: lib.rs
courses/rust/my_projects/project2/: Cargo.toml
courses/rust/my_projects/project2/src/: lib.rs
courses/rust/my_projects/project3/: Cargo.toml
courses/rust/my_projects/project3/src/: engine.rs  error.rs  kv.rs  lib.rs  proto.rs  sled.rs
