[package]
name = "kvs"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
description = "A key-value store"
edition = "2018"


[[bin]]
name = "kvs"
test = false

[dependencies]
anyhow = "1.0.28"
structopt = "0.3.14"
serde = { version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"