[package]
name = "kvs"
version = "0.1.0"
authors = ["Mat Wood <mat@thepacketgeek.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
byteorder = ""
env_logger = ""
glob = "0.3.0"
log = ""
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
sled = "0.32.0"
structopt = "0.3.14"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"